# magenta

./: .default.config.json  .gitignore  CMakeLists.txt  README.md  config.json  template.html
.github/workflows/: build-and-test.yml
app/: CMakeLists.txt  cmd.cc  cmd.hpp  magenta.cc
docs/: 404.md  index.md
docs/css/: style.css
docs/j/2023/: foo.md
docs/j/2023/06/: index.md
docs/j/2023/07/: index.md
lib/include/: config.h  html.h  http.h  server.h  util.h
lib/src/: CMakeLists.txt  config.cc  html.cc  http.cc  util.cc
tests/: CMakeLists.txt  driver.cc
tests/artifacts/: hello.md  template.html
